Cursor implementation done for GET request in ShellAPI and LookUp API. Spring jdbc changed to spring jpa.
